Added Calendar Button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme">
         </activity>
-        <activity android:name=".WebCamView"
+        <activity android:name=".LabWebView"
                   android:parentActivityName=".ViewLabActivity">
 
         </activity>
