--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest package="cs490.labbroadcaster"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -23,9 +23,9 @@
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme">
         </activity>
-        <activity android:name=".LabWebView"
-                  android:parentActivityName=".ViewLabActivity">
-
+        <activity
+            android:name=".LabWebView"
+            android:parentActivityName=".ViewLabActivity">
         </activity>
     </application>
 
