Fixed App Crash

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
             android:name=".LabWebView"
             android:parentActivityName=".ViewLabActivity">
         </activity>
+        <activity
+            android:name=".UserPreferences"
+            android:parentActivityName=".MainActivity">
+
+        </activity>
     </application>
 
 </manifest>
