--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,8 @@ dependencies {
     compile 'com.android.support:palette-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:customtabs:23.1.0'
+
+
+    compile 'com.getbase:floatingactionbutton:1.10.1'
     compile files('libs/plugin.jar')
 }
