--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
@@ -15,30 +14,30 @@
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-
         </activity>
         <activity
             android:name=".ViewLabActivity"
             android:label="@string/title_activity_view_lab"
+            android:launchMode="singleTop"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme"
-            android:launchMode="singleTop">
+            android:theme="@style/AppTheme">
         </activity>
         <activity
             android:name=".LabWebView"
-            android:parentActivityName=".ViewLabActivity"
-            >
+            android:parentActivityName=".ViewLabActivity">
         </activity>
         <activity
             android:name=".UserPreferences"
             android:parentActivityName=".MainActivity">
-
+        </activity>
+        <activity android:name=".MainFragment">
+        </activity>
+        <activity android:name=".ViewLabFragment">
         </activity>
     </application>
 
