--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
         </activity>
         <activity android:name=".ViewLabFragment">
         </activity>
+        <activity android:name=".ViewUserProfile"
+                  android:parentActivityName=".ViewLabActivity">
+        </activity>
     </application>
 
 </manifest>
